Revision history for {{$dist->name}}

{{$NEXT}}

2.36      2019-03-10 19:40:18 -0400
  - Require plicease plugin 2.35
  - overrides for [MetaResources] now available:
     * homepage
     * bugtracker.web
     * repository.url
     * repository.web
     * repository.type

2.35      2019-03-05 21:48:06 -0500
  - Require plicease plugin 2.35
  - Add cirrus_user attributes

2.34      2019-02-22 04:00:15 -0500
  - Require plicease plugsin 2.34
  - Add appveyor_user and travis_user attributes

2.33      2019-02-09 06:43:48 -0500
  - Require plicease plugsin 2.33
  - Remove .travis.yml checks that don't make sense with cip

2.32      2019-01-21 00:10:20 -0500
  - Require plicease plugsin 2.32

2.31      2019-01-02 09:05:59 -0500
  - Add option copy_mm

2.30      2019-01-01 09:49:23 -0500
  - Allow maint/run- in addition to inc/run/
  - after_build.pl and after_release.pl execute later than they used to

2.29      2018-12-05 16:36:31 -0500
  - Update warnings about versions
  - Add support for PLICEASE_DZIL_NO_GIT

2.28      2018-08-30 14:51:50 -0400
  - Require plicease plugins 2.28

2.27      2018-08-30 10:02:01 -0400
  - Require plicease plugins 2.27

2.26      2018-05-22 13:24:18 -0400
  - Require plicease plugins 2.26
  - Allow override of underscore_eval_version on OurPkgVersion

2.25      2017-11-29 14:49:19 -0500
  - Require plicease plugins 2.25
  - Use [Author::Plicease::NoUnsafeInc]
  - Check that PERL_USE_UNSAFE_INC is set correctly in travis.yml

2.24      2017-11-07 08:09:45 -0500
  - Require plicease plugins 2.24

2.23      2017-08-31 11:00:16 -0400
  - Migrate to EUMM from MB
  - Require plicease plugin 2.23

2.22      2017-08-23 15:11:10 -0400
  - Remove CPANFile from the bundle
  - Remove dependency on Path::Class
  - Require Perl 5.14
  - Require plicease plugin 2.22

2.21      2017-07-31 13:53:47 -0400
  - Require plicease plugin 2.21

2.20      2017-07-12 16:44:27 -0400
  - Require plicease plugin 2.20

2.19      2017-07-12 08:20:54 -0400