@@ -24,6 +24,7 @@ format = %-9v %{yyyy-MM-dd HH:mm:ss Z}d
 [AutoPrereqs]
 
 [OurPkgVersion]
+no_critic = 1
 underscore_eval_version = 1
 
 [MetaJSON]
